--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.3.2
+  flutter_screenutil: ^5.9.3
+  provider: ^6.1.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
