--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   provider: ^6.1.2
   path: ^1.8.3
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
